[package]
name = "explain"
version = "0.1.0"
authors = ["danielhamngren <daniel.hamngren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
structopt = "0.3.20"

[dependencies.reqwest]
version = "0.10.9"
features = ["blocking", "json"]
